fix word wrap

--- a/public/index.css
+++ b/public/index.css
@@ -169,6 +169,7 @@ a {
 
 .subreddit-private p,
 .subreddit-private a {
+    word-wrap: anywhere;
     color: #00ffaa !important;
 }
 
